--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 class="email"
                 placeholder="Email address"
               />
-              <div class="img"><img src="../images/icon-arrow.svg" alt="" /></div>
+              <div class="img"><img src="./images/icon-arrow.svg" alt="" /></div>
               <div class="validation">Please provide a valid email</div>
             </form>
           </div>
