--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
               and our launch deals.
             </p>
             <form id="form" action="#">
-              <input
-                type="email"
-                class="email"
-                placeholder="Email address"
-              />
-              <div class="img"><img src="./images/icon-arrow.svg" alt="" /></div>
+              <input type="email" class="email" placeholder="Email address" />
+              <div class="img"><img src="images/icon-arrow.svg" alt="" /></div>
               <div class="validation">Please provide a valid email</div>
             </form>
           </div>
@@ -60,8 +56,10 @@
     </div>
     <footer>
       <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Wessam Oun</a>.
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Wessam Oun</a>.
       </p>
     </footer>
     <script src="./js/bootstrap.bundle.min.js"></script>
