--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <form id="form" action="#">
               <input type="email" class="email" placeholder="Email address" />
-              <div class="img"><img src="images/icon-arrow.svg" alt="" /></div>
+              <div class="img"><img src="./images/icon-arrow.svg" alt="" /></div>
               <div class="validation">Please provide a valid email</div>
             </form>
           </div>
